--- a/views/grupo.ejs
+++ b/views/grupo.ejs
@@ -81,7 +81,7 @@
                                             <input type="hidden" name="codigo" value="<%=codigo%>">
                                             <input type="submit" class="btn btn-primary" data-bss-hover-animate="rubberBand"
                                             type="submit"
-                                            style="position: static;display: inline-block;margin-left: 30%;background: rgb(16,210,247);border-style: solid;border-color: rgb(16,210,247);border-bottom-style: solid;border-bottom-color: rgb(16,210,247);font-size: 18px;margin-top: 1rem;"
+                                            style="position: static;display: inline-block;margin-left: 30%;background: rgb(233, 6, 6); border-color:rgb(233, 6, 6) ;margin-top: 1rem; color: black;"
                                             value="Borrar">
                                             
                                        
@@ -92,7 +92,7 @@
                                                 <input type="hidden" name="codigo" value="<%=codigo%>">
                                                 <input type="submit" class="btn btn-primary" data-bss-hover-animate="rubberBand"
                                                 type="submit"
-                                                style="position: static;display: inline-block;margin-left: 30%;background: rgb(16,210,247);border-style: solid;border-color: rgb(16,210,247);border-bottom-style: solid;border-bottom-color: rgb(16,210,247);font-size: 18px;margin-top: 1rem;"
+                                                style="position: static;display: inline-block;margin-left: 30%;background: rgb(233, 134, 6); border-color:rgb(233, 134, 6) ;margin-top: 1rem; color: black;"
                                                 value="Salir">
                                                 
                                            
