--- a/views/Administrador.ejs
+++ b/views/Administrador.ejs
@@ -57,25 +57,22 @@
                             <table class="table table-striped table tablesorter" id="ipi-table">
                                 <thead class="thead-dark" style="background: rgb(33,37,48);border-width: 0px;border-color: rgb(0,0,0);border-bottom-color: #21252F;">
                                     <tr style="border-style: none;border-color: rgba(255,255,255,0);background: #21252f;">
-                                        <th class="text-center filter-false sorter-false">Foto</th>
+                                        <th class="text-center filter-false sorter-false">id</th>
                                         <th class="text-center">NOMBRE</th>
                                         <th class="text-center">cORREO</th>
                                         <th class="text-center filter-false sorter-false">Acciones</th>
                                     </tr>
                                 </thead>
+
+                                <% usuarios.forEach((user)=>{%>
                                 <tbody class="text-center" style="border-top-width: 0px;">
                                     <tr style="background: #262a38;">
-                                        <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><i class="icon ion-ios-contact-outline" style="background: var(--bs-card-cap-bg);font-size: 33px;color: var(--bs-card-bg);"></i></td>
-                                        <td style="color: rgb(255,255,255);">User01</td>
-                                        <td style="color: rgb(255,255,255);">usuario01@gmail.com</td>
+                                        <td style="color: rgb(255,255,255);"><%=user.idUsuario%></td>
+                                        <td style="color: rgb(255,255,255);"><%=user.Usuario%></td>
+                                        <td style="color: rgb(255,255,255);"><%=user.email%></td>
                                         <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><a class="btn btnMaterial btn-flat success semicircle" role="button" href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen" style="color: rgb(4,75,192);"></i></a><a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
                                     </tr>
-                                    <tr style="background: #212430;">
-                                        <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><i class="icon ion-ios-contact-outline" style="background: var(--bs-card-cap-bg);font-size: 33px;color: var(--bs-card-bg);"></i></td>
-                                        <td style="color: rgb(255,255,255);">User02</td>
-                                        <td style="color: rgb(255,255,255);"><span style="background-color: rgb(38, 42, 56);">usuario01@gmail.com</span><br></td>
-                                        <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><a class="btn btnMaterial btn-flat success semicircle" role="button" href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen" style="color: rgb(4,75,193);"></i></a><a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
-                                    </tr>
+                               <% } )%>
                                 </tbody>
                             </table>
                         </div>
