--- a/views/Administrador.ejs
+++ b/views/Administrador.ejs
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/css/Bold-BS4-Responsive-Pricing-Table-Snippet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="assets/css/Ludens---1-Dark-mode-Index-Table-with-Search-Filters.css">
@@ -29,8 +30,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient" style="height: 6rem;width: 100%;background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgb(0,133,255) 100%);">
-        <div class="container"><a class="navbar-brand logo" href="#">WR</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient"
+        style="height: 6rem;width: 100%;background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgb(0,133,255) 100%);">
+        <div class="container"><a class="navbar-brand logo" href="#">WR</a><button data-bs-toggle="collapse"
+                class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle
+                    navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item item"><a class="nav-link active" href="/admin">Administrar</a></li>
@@ -55,8 +59,10 @@
                     <div class="col-12">
                         <div class="table-responsive" style="border-top-style: none;background: #171921;">
                             <table class="table table-striped table tablesorter" id="ipi-table">
-                                <thead class="thead-dark" style="background: rgb(33,37,48);border-width: 0px;border-color: rgb(0,0,0);border-bottom-color: #21252F;">
-                                    <tr style="border-style: none;border-color: rgba(255,255,255,0);background: #21252f;">
+                                <thead class="thead-dark"
+                                    style="background: rgb(33,37,48);border-width: 0px;border-color: rgb(0,0,0);border-bottom-color: #21252F;">
+                                    <tr
+                                        style="border-style: none;border-color: rgba(255,255,255,0);background: #21252f;">
                                         <th class="text-center filter-false sorter-false">id</th>
                                         <th class="text-center">ID persona</th>
                                         <th class="text-center">NOMBRE</th>
@@ -66,17 +72,35 @@
                                 </thead>
 
                                 <% usuarios.forEach((user)=>{%>
-                                <tbody class="text-center" style="border-top-width: 0px;">
-                                    <tr style="background: #262a38;">
-                                        <td style="color: rgb(255,255,255);"><%=user.idUsuario%></td>
-                                        <td style="color: rgb(255,255,255);"><%=user.idPersona%></td>
-
-                                        <td style="color: rgb(255,255,255);"><%=user.Usuario%></td>
-                                        <td style="color: rgb(255,255,255);"><%=user.email%></td>
-                                        <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><a class="btn btnMaterial btn-flat success semicircle" role="button" href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen" style="color: rgb(4,75,192);"></i></a><a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
-                                    </tr>
-                               <% } )%>
-                                </tbody>
+                                    <form action="delUsuario" id="borrar-usuario">
+                                    <tbody class="text-center" style="border-top-width: 0px;">
+                                        <tr style="background: #262a38;">
+                                            <td style="color: rgb(255,255,255);">
+                                                <%=user.idUsuario%>
+                                            </td>
+                                            <td style="color: rgb(255,255,255);">
+                                                <%=user.idPersona%>
+                                            </td>
+                                            <td style="color: rgb(255,255,255);">
+                                                <%=user.Usuario%>
+                                            </td>
+                                            <td style="color: rgb(255,255,255);">
+                                                <%=user.email%>
+                                            </td>
+                                            <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
+                                                <a onclick="event.preventDefault(); document.getElementById('borrar-usuario').submit();"
+                                                class="btn btnMaterial btn-flat success semicircle" role="button"
+                                                    href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen"
+                                                        style="color: rgb(4,75,192);"></i></a><a
+                                                    class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover"
+                                                    role="button" style="margin-left: 5px;" data-bs-toggle="modal"
+                                                    data-bs-target="#delete-modal" href="#"><i
+                                                        class="fas fa-trash btnNoBorders"
+                                                        style="color: #DC3545;"></i></a></td>
+                                        </tr>
+                                    </form>
+                                        <% } )%>
+                                    </tbody>
                             </table>
                         </div>
                     </div>
@@ -87,8 +111,10 @@
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="assets/js/Ludens---1-Dark-mode-Index-Table-with-Search-Filters.js"></script>
