--- a/views/Administrador.ejs
+++ b/views/Administrador.ejs
@@ -72,35 +72,40 @@
                                 </thead>
 
                                 <% usuarios.forEach((user)=>{%>
-                                    <form action="delUsuario" id="borrar-usuario">
-                                    <tbody class="text-center" style="border-top-width: 0px;">
-                                        <tr style="background: #262a38;">
-                                            <td style="color: rgb(255,255,255);">
-                                                <%=user.idUsuario%>
-                                            </td>
-                                            <td style="color: rgb(255,255,255);">
-                                                <%=user.idPersona%>
-                                            </td>
-                                            <td style="color: rgb(255,255,255);">
-                                                <%=user.Usuario%>
-                                            </td>
-                                            <td style="color: rgb(255,255,255);">
-                                                <%=user.email%>
-                                            </td>
-                                            <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
-                                                <a onclick="event.preventDefault(); document.getElementById('borrar-usuario').submit();"
-                                                class="btn btnMaterial btn-flat success semicircle" role="button"
-                                                    href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen"
-                                                        style="color: rgb(4,75,192);"></i></a><a
-                                                    class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover"
-                                                    role="button" style="margin-left: 5px;" data-bs-toggle="modal"
-                                                    data-bs-target="#delete-modal" href="#"><i
-                                                        class="fas fa-trash btnNoBorders"
-                                                        style="color: #DC3545;"></i></a></td>
-                                        </tr>
+                                    <form action="admin/delUsuario" id="borrar-usuario" method="post">
+                                        <input type="hidden" value="<%=user.idPersona%>" name="idPersona">
+                                        <input type="hidden" value="<%=user.idUsuario%>" name="idUsuario">
+                                        <tbody class="text-center" style="border-top-width: 0px;">
+                                            <tr style="background: #262a38;">
+                                                <td style="color: rgb(255,255,255);">
+                                                    <%=user.idUsuario%>
+                                                </td>
+                                                <td style="color: rgb(255,255,255);">
+
+                                                    <%=user.idPersona%>
+                                                </td>
+                                                <td style="color: rgb(255,255,255);">
+                                                    <%=user.Usuario%>
+                                                </td>
+                                                <td style="color: rgb(255,255,255);">
+                                                    <%=user.email%>
+                                                </td>
+                                                <td class="text-center align-middle"
+                                                    style="max-height: 60px;height: 60px;">
+                                                    <a class="btn btnMaterial btn-flat success semicircle" role="button"
+                                                        href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen"
+                                                            style="color: rgb(4,75,192);"></i></a>
+                                                    <a onclick="event.preventDefault(); document.getElementById('borrar-usuario').submit();"
+                                                     class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover"
+                                                        role="button" style="margin-left: 5px;" data-bs-toggle="modal"
+                                                        data-bs-target="#delete-modal" href="#"><i
+                                                            class="fas fa-trash btnNoBorders"
+                                                            style="color: #DC3545;"></i></a>
+                                                </td>
+                                            </tr>
                                     </form>
-                                        <% } )%>
-                                    </tbody>
+                                    <% } )%>
+                                        </tbody>
                             </table>
                         </div>
                     </div>
