--- a/views/grupos.ejs
+++ b/views/grupos.ejs
@@ -69,7 +69,7 @@
                         <a href="#modal2"><button class="btn btn-primary" type="button">Unirme</button></a>
                     </div>
                 </div>
-                <div id="modal1" class="modalmask">
+                <div id="modal1" class="modals">
                     <div class="modalbox movedown">
                         <a href="#close" title="Close" class="close">X</a>
                         <br>
