--- a/views/grupo.ejs
+++ b/views/grupo.ejs
@@ -108,7 +108,7 @@
                 <div class="col-md-6 col-xxl-6">
                     <div class="bootstrap_chat">
                         <div class="container py-5 px-4">
-                            <p><iframe class="msr" src="http://localhost:3000/<%=nombre%>" width=600
+                            <p><iframe class="msr" src="https://chatwr2-production.up.railway.app/<%=nombre%>" width=600
                                     height="500"></iframe>
                         </div>
                     </div>
