--- a/views/grupos.ejs
+++ b/views/grupos.ejs
@@ -69,26 +69,7 @@
                         <a href="#modal2"><button class="btn btn-primary" type="button">Unirme</button></a>
                     </div>
                 </div>
-                <div id="modal1" class="modals">
-                    <div class="modalbox movedown">
-                        <a href="#close" title="Close" class="close">X</a>
-                        <br>
-                        <center>
-                            <h3>Crear grupo</h3>
-                        </center>
-                        <br>
-                        <form action="grupos/crearGrupo" method="post">
-                            <label>
-                                <font color="white">Inserte el nombre del grupo</font>
-                            </label>
-                            <input type="text" name="nombreGrupo">
-                            <br><br>
-                            <center> <input class="input" type="submit" value="Enviar"></center>
-
-                        </form>
-                    </div>
-                </div>
-
+            
                 <div id="modal2" class="modalmask">
                     <div class="modalbox movedown">
                         <a href="#close" title="Close" class="close">X</a>
@@ -104,6 +85,26 @@
                             <br><br>
                             <center> <input class="input" type="submit" value="Enviar"></center>
 
+
+                        </form>
+                    </div>
+                </div>
+
+                <div id="modal1" class="modalmask">
+                    <div class="modalbox movedown">
+                        <a href="#close" title="Close" class="close">X</a>
+                        <br>
+                        <center>
+                            <h3>Crear grupo</h3>
+                        </center>
+                        <br>
+                        <form action="grupos/crearGrupo" method="post">
+                            <label>
+                                <font color="white">Inserte el nombre del grupo</font>
+                            </label>
+                            <input type="text" name="nombreGrupo">
+                            <br><br>
+                            <center> <input class="input" type="submit" value="Enviar"></center>
 
                         </form>
                     </div>
