--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="/assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="/assets/css/Bold-BS4-Responsive-Pricing-Table-Snippet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/css/theme.bootstrap_4.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/css/pikaday.min.css">
     <link rel="stylesheet" href="/assets/css/Ludens---1-Dark-mode-Index-Table-with-Search-Filters.css">
@@ -30,8 +31,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient" style="height: 6rem;width: 100%;background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgb(0,133,255) 100%);">
-        <div class="container"><a class="navbar-brand logo" href="#">WR</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top portfolio-navbar gradient"
+        style="height: 6rem;width: 100%;background: rgb(2,0,36);background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgb(0,133,255) 100%);">
+        <div class="container"><a class="navbar-brand logo" href="#">WR</a><button data-bs-toggle="collapse"
+                class="navbar-toggler" data-bs-target="#navbarNav"><span class="visually-hidden">Toggle
+                    navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item item"><a class="nav-link active" href="/admin">Administrar</a></li>
@@ -41,48 +45,56 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid" style="margin-bottom: 50px;">
+
+
+
+    <style>
+        .card-body {
+            position: relative;
+        }
+
+        .btn-full-width {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+    </style>
+     <div class="container mt-5">
         <div class="row">
-            <div class="col-12 col-sm-6 col-md-6">
-                <h3 class="text-white mb-4">Dashboard</h3>
-            </div>
-            <div class="col-12 col-sm-6 col-md-6 text-end" style="margin-bottom: 30px;"><a class="btn btn-primary" role="button"><i class="fa fa-plus"></i>&nbsp;Agregar colaborador</a></div>
-        </div>
-        <div class="card" id="TableSorterCard" style="border-style: none;border-radius: 6.5px;">
-            <div class="card-header py-3" style="border-width: 0px;background: rgb(23,25,33);">
-                <div class="row table-topper align-items-center">
-                    <div class="col-12 col-sm-5 col-md-6 text-start" style="margin: 0px;padding: 5px 15px;">
-                        <p class="m-0 fw-bold" style="color: rgb(255,255,255);">Pruebas de sistema</p>
+            <div class="col">
+                <div class="card">
+                    <img
+                  
+                    src="/assets/img/Captura_de_pantalla_2023-03-15_234334-removebg-preview.png" width="422"
+                    height="370" class="card-img-top" alt="Imagen 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Producto 1</h5>
+                        <p class="card-text">Descripción del producto 1.</p>
+                        <br>
+                        <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <div class="table-responsive" style="border-top-style: none;background: #171921;">
-                        <table class="table table-striped table tablesorter" id="ipi-table">
-                            <thead class="thead-dark" style="background: rgb(33,37,48);border-width: 0px;border-color: rgb(0,0,0);border-bottom-color: #21252F;">
-                                <tr style="border-style: none;border-color: rgba(255,255,255,0);background: #21252f;">
-                                    <th class="text-center">Nombre</th>
-                                    <th class="text-center">Puesto</th>
-                                    <th class="text-center">Departamento</th>
-                                    <th class="text-center filter-false sorter-false">Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody class="text-center" style="border-top-width: 0px;">
-                                <tr style="background: #262a38;">
-                                    <td style="color: rgb(255,255,255);">Prueba general</td>
-                                    <td style="color: rgb(255,255,255);"></td>
-                                    <td style="color: rgb(255,255,255);">Diseño</td>
-                                    <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><a class="btn btnMaterial btn-flat primary semicircle" role="button" href="#" style="color: #00bdff;"><i class="far fa-eye"></i></a><a class="btn btnMaterial btn-flat success semicircle" role="button" href="#" style="color: rgb(0,197,179);"><i class="fas fa-pen"></i></a><a class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover" role="button" style="margin-left: 5px;" data-bs-toggle="modal" data-bs-target="#delete-modal" href="#"><i class="fas fa-trash btnNoBorders" style="color: #DC3545;"></i></a></td>
-                                </tr>
-                                <tr style="background: #212430;">
-                                    <td style="color: rgb(255,255,255);"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modal1">Modal Button</button><br></td>
-                                    <td style="color: rgb(255,255,255);"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modal1">Modal Button</button></td>
-                                    <td style="color: rgb(255,255,255);"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modal1">Modal Button</button></td>
-                                    <td class="text-center align-middle" style="max-height: 60px;height: 60px;"><button class="btn btn-primary" type="button" data-bs-toggle="modal" data-bs-target="#modal1">Modal Button</button></td>
-                                </tr>
-                            </tbody>
-                        </table>
+            <div class="col">
+                <div class="card">
+                    <img src="/assets/img/no.png" class="card-img-top" alt="Imagen 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Producto 2</h5>
+                        <p class="card-text">Descripción del producto 2.</p>
+                        <br>
+                        <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card">
+                    <img height="300px" src="/assets/img/no.png" class="card-img-top" alt="Imagen 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Producto 3</h5>
+                        <p class="card-text">Descripción del producto 3.</p>
+                        <br>
+                        <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
                 </div>
             </div>
@@ -91,8 +103,10 @@
     <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/jquery.tablesorter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-filter.min.js"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.31.2/js/widgets/widget-storage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
     <script src="/assets/js/Ludens---1-Dark-mode-Index-Table-with-Search-Filters.js"></script>
