--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -60,17 +60,15 @@
             width: 100%;
         }
     </style>
-     <div class="container mt-5">
+    <div class="container mt-5">
         <div class="row">
             <div class="col">
                 <div class="card">
-                    <img
-                  
-                    src="/assets/img/Captura_de_pantalla_2023-03-15_234334-removebg-preview.png" width="422"
-                    height="370" class="card-img-top" alt="Imagen 1">
+                    <img src="/assets/img/Captura_de_pantalla_2023-03-15_234334-removebg-preview.png" width="422"
+                        height="370" class="card-img-top" alt="Imagen 1">
                     <div class="card-body">
-                        <h5 class="card-title">Producto 1</h5>
-                        <p class="card-text">Descripción del producto 1.</p>
+                        <h5 class="card-title">Water Reminder main</h5>
+                        <p class="card-text">status del proyecto principal en linea</p>
                         <br>
                         <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
@@ -78,10 +76,10 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img src="/assets/img/no.png" class="card-img-top" alt="Imagen 2">
+                    <img src="/assets/img/bdimage.png" class="card-img-top" alt="Imagen 2" width="422" height="370">
                     <div class="card-body">
-                        <h5 class="card-title">Producto 2</h5>
-                        <p class="card-text">Descripción del producto 2.</p>
+                        <h5 class="card-title">Base de Datos WaterReminder</h5>
+                        <p class="card-text">Estatus de conexion de la base de datos</p>
                         <br>
                         <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
@@ -89,10 +87,10 @@
             </div>
             <div class="col">
                 <div class="card">
-                    <img height="300px" src="/assets/img/no.png" class="card-img-top" alt="Imagen 3">
+                    <img src="/assets/img/ChatImage.png" class="card-img-top" alt="Imagen 2" width="422" height="370">
                     <div class="card-body">
-                        <h5 class="card-title">Producto 3</h5>
-                        <p class="card-text">Descripción del producto 3.</p>
+                        <h5 class="card-title">Chat de WaterReminder</h5>
+                        <p class="card-text">Estatus del chat de WaterReminder</p>
                         <br>
                         <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
