--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item item"><a class="nav-link active" href="/admin">Administrar</a></li>
-                    <li class="nav-item item"><a class="nav-link" href="/admin/Pruebas">Pruebas</a></li>
+                    <li class="nav-item item"><a class="nav-link" href="/pruebas">Pruebas</a></li>
                     <li class="nav-item item"><a class="nav-link" href="/admin/perfilAdmin">Perfil</a></li>
                 </ul>
             </div>
@@ -97,6 +97,8 @@
                 </div>
             </div>
         </div>
+
+        <h2 style="font-size: 32px;color: #000000;font-weight: bold;margin-top: 1em;">Estatus:</h2>
     </div>
     <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/bs-init.js"></script>
