--- a/views/Administrador.ejs
+++ b/views/Administrador.ejs
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item item"><a class="nav-link active" href="/admin">Administrar</a></li>
-                    <li class="nav-item item"><a class="nav-link" href="/admin/Pruebas">Pruebas</a></li>
+                    <li class="nav-item item"><a class="nav-link" href="/pruebas">Pruebas</a></li>
                     <li class="nav-item item"><a class="nav-link" href="/admin/perfilAdmin">Perfil</a></li>
                 </ul>
             </div>
