proyect status test function

--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -70,7 +70,7 @@
                         <h5 class="card-title">Water Reminder main</h5>
                         <p class="card-text">status del proyecto principal en linea</p>
                         <br>
-                        <a href="#" class="btn btn-dark btn-full-width">Comprar</a>
+                        <a href="pruebas/checkStatus" class="btn btn-dark btn-full-width">Comprar</a>
                     </div>
                 </div>
             </div>
