pruebas chat y mensaje de error

--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -92,7 +92,7 @@
                         <h5 class="card-title">Chat de WaterReminder</h5>
                         <p class="card-text">Estatus del chat de WaterReminder</p>
                         <br>
-                        <a href="#" class="btn btn-dark btn-full-width">Comporbar conexión</a>
+                        <a href="../pruebas/checkStatusChat" class="btn btn-dark btn-full-width">Comporbar conexión</a>
                     </div>
                 </div>
             </div>
