pruebas conexion base de datos

--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -81,7 +81,7 @@
                         <h5 class="card-title">Base de Datos WaterReminder</h5>
                         <p class="card-text">Estatus de conexion de la base de datos</p>
                         <br>
-                        <a href="#" class="btn btn-dark btn-full-width">Probar Conexion</a>
+                        <a href="../pruebas/dbCheck" class="btn btn-dark btn-full-width">Probar Conexion</a>
                     </div>
                 </div>
             </div>
