vistas admin fixes

--- a/views/Pruebas.ejs
+++ b/views/Pruebas.ejs
@@ -79,7 +79,7 @@
                     <img src="/assets/img/bdimage.png" class="card-img-top" alt="Imagen 2" width="422" height="370">
                     <div class="card-body">
                         <h5 class="card-title">Base de Datos WaterReminder</h5>
-                        <p class="card-text">Estatus de conexion de la base de datos</p>
+                        <p class="card-text">Estatus de conexión de la base de datos</p>
                         <br>
                         <a href="../pruebas/dbCheck" class="btn btn-dark btn-full-width">Probar Conexion</a>
                     </div>
@@ -92,7 +92,7 @@
                         <h5 class="card-title">Chat de WaterReminder</h5>
                         <p class="card-text">Estatus del chat de WaterReminder</p>
                         <br>
-                        <a href="../pruebas/checkStatusChat" class="btn btn-dark btn-full-width">Comporbar conexión</a>
+                        <a href="../pruebas/checkStatusChat" class="btn btn-dark btn-full-width">Comprobar conexión</a>
                     </div>
                 </div>
             </div>
