--- a/views/perfil_admin.ejs
+++ b/views/perfil_admin.ejs
@@ -160,7 +160,7 @@
               <hr>
               <div class="row">
                 <div class="col-sm-12">
-                  <a class="btn btn-info " target="__blank" href="perfil/editarPerfil">Editar</a>
+                  <a class="btn btn-info " target="__blank" href="../perfil/editarPerfil">Editar</a>
                 </div>
               </div>
             </div>
