meta de agua tabla usuarios en administrador

--- a/views/Administrador.ejs
+++ b/views/Administrador.ejs
@@ -93,7 +93,7 @@
                                                     <%=user.Usuario%>
                                                 </td>
                                                 <td style="color: rgb(255,255,255);">
-                                                    meta :3
+                                                    <%=user.meta_agua%> mL
                                                 </td>
                                                 <td style="color: rgb(255,255,255);">
                                                     <%=user.email%>
